3. Front-end: Booking Tour Page

--- a/tour-details/booking.html
+++ b/tour-details/booking.html
@@ -30,7 +30,7 @@
                 <h1>Đặt tour</h1>
                 <h2 class="chekout-name">
                     Tên dịch vụ
-                    <a href="#" class="pink-color">Tour 3 đảo Nha Trang (Giá Tour tham quan 3 đảo Vip)</a>
+                    <a href="#" class="pink-color">TOUR 3 ĐẢO NHA TRANG (GIÁ TOUR THAM QUAN 3 ĐẢO VIP)</a>
                 </h2>
                 <form method="post" action="/checkout">
                     <input type="hidden" id="PriceId" name="PriceId" value="15" />
@@ -70,8 +70,8 @@
                                     </div>
                                 </div>
 
-                                <div class="from-row">
-                                    <div class="from-froup col-6 col-md-3">
+                                <div class="form-row">
+                                    <div class="form-froup col-6 col-md-3">
                                         <label for="AdultAmount">
                                             Số người lớn
                                             <span class="pink-color">*</span>
@@ -90,7 +90,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="from-froup col-6 col-md-3">
+                                    <div class="form-froup col-6 col-md-3">
                                         <label for="ChildAmount">Số Trẻ em
                                             <span class="pink-color">*</span>
                                         </label>
@@ -191,101 +191,5 @@
             </div>
         </div>
     </section>
-
-    <footer style="background-image: url(https://nhatrangbooking.com.vn/images/theme1/bg-footer.jpg)" ;">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
-                    <div class="logo-footer">
-                        <a href="/">
-                            <img src="" alt="NhaTrangBooking" width="175" height="58">
-                        </a>
-                    </div>
-
-                    <p class="copyright">© 2019 - 2023 NhaTrangBooking</p>
-
-                    <div class="socials">
-                        <a href="#" class="social" aria-label="facebook">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#" class="social" aria-label="twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social" aria-label="tumblr">
-                            <i class="fab fa-tumblr"></i>
-                        </a>
-                        <a href="#" class="social" aria-label="instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <p class="title-col">Chính sách</p>
-                    <ul class="quick-links">
-                        <li>
-                            <a href="#">Điều khoản sử dụng</a>
-                        </li>
-                        <li>
-                            <a href="#">Chính sách bảo mật</a>
-                        </li>
-                        <li>
-                            <a href="#">Đặt cọc Online</a>
-                        </li>
-                        <li>
-                            <a href="#">Chính sách Hoàn - Hủy Tour</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-5">
-                    <p class="title-col">Liên hệ chúng tôi</p>
-
-                    <ul class="contact-info">
-                        <li>
-                            <i class="fas fa-bullhorn"></i>
-                            Quảng cáo - PR: 0123.456.789
-                        </li>
-                        <li>
-                            <i class="fas fa-phone"></i>
-                            0123.456.789 - 0123.456.789
-                        </li>
-                        <li>
-                            <i class="fas fa-map-marker"></i>
-                            Đại học số 1 Ép Pê Tê
-                        </li>
-                        <li>
-                            <i class="fas fa-envelope"></i>
-                            info@nhatrangnatureelite.com.vn
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="page-links">
-                <ul>
-                    <li>
-                        <a href="#">Về chúng tôi</a>
-                    </li>
-                    <li>
-                        <a href="#">Hướng Dẫn Thanh Toán</a>
-                    </li>
-                    <li>
-                        <a href="#">Blog du lịch</a>
-                    </li>
-                    <li>
-                        <a href="#">Liên hệ</a>
-                    </li>
-                    <li>
-                        <a href="#" title="DMCA.com Protection Status" class="dmca-badge"> <img
-                                src="https://images.dmca.com/Badges/dmca-badge-w100-5x1-03.png?ID=6d73714b-7e38-4e2d-842f-7c9b0307b9e2"
-                                alt="DMCA.com Protection Status" width="100" height="20"></a>
-                        <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-
 </body>
-
 </html>
