Upload page About

--- a/tour-details/homepage.html
+++ b/tour-details/homepage.html
@@ -32,7 +32,7 @@
 
         <nav class="nav-menu">
             <ul class="main-menu">
-                <li class="menu-item"><a href="#">Giới thiệu</a></li>
+                <li class="menu-item"><a href="./about.html">Giới thiệu</a></li>
                 <li class="menu-item"><a href="#">Tour</a></li>
                 <li class="menu-item"><a href="#">Blogs</a></li>
                 <li class="menu-item"><a href="#">Liên hệ</a></li>
@@ -85,7 +85,7 @@
             <div class="container">
                 <h2 class="title">
                     <span class="pink-color">Top</span>
-                    tour Nha Trang
+                    tour One-day
                 </h2>
                 <p class="des">Các tour được khách du lịch lựa chọn nhiều nhất</p>
                 <div class="tours">
@@ -210,7 +210,7 @@
             </div>
         </div>
 
-        <div class="about-us">
+        <div class="about">
             <div class="container">
                 <h2 class="title">Công Ty Du Lịch Uy Tín Và Chuyên Nghiệp</h2>
                 <p>
@@ -221,7 +221,7 @@
                     dịch vụ với một mức giá tốt nhất thị trường. Ở Nha Trang Nature Elite, khách hàng là thượng đế.
                 </p>
                 <div class="text-center">
-                    <a class="btn btn-default" href="#">Tìm hiểu thêm</a>
+                    <a class="btn btn-default" href="./about.html">Tìm hiểu thêm</a>
                 </div>
             </div>
         </div>
@@ -299,7 +299,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
                     <div class="logo-footer">
                         <a href="#">
-                            <img src="./assets/image/logo.png" alt="Đây là logo" width="175" height="58">
+                            <img src="./assets/image/logo-footer.png" alt="Đây là logo" width="175" height="58">
                         </a>
                     </div>
                     <p class="copyright">© 2023 NhaTrangNatureElite</p>
@@ -353,13 +353,13 @@
             <div class="page-links">
                 <ul>
                     <li>
-                        <a href="/gioi-thieu">Về chúng tôi</a>
+                        <a href="./about.html">Về chúng tôi</a>
                     </li>
                     <li>
-                        <a href="/huong-dan-thanh-toan">Hướng Dẫn Thanh Toán</a>
+                        <a href="#">Hướng Dẫn Thanh Toán</a>
                     </li>
                     <li>
-                        <a href="/lien-he">Liên hệ</a>
+                        <a href="#">Liên hệ</a>
                     </li>
                 </ul>
             </div>
