Upload update project

--- a/tour-details/homepage.html
+++ b/tour-details/homepage.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="./assets/css/homepage.css">
-    <link rel="stylesheet" href="./assets/css/slider/owl.carousel.min.css">
-    <link rel="stylesheet" href="./assets/css/slider/owl.theme.default.min.css">
+    <link rel="stylesheet" href="./assets/css/HomePageCSS/bootstrap.css">
+    <link rel="stylesheet" href="./assets/css/HomePageCSS/homepage.css">
+    <link rel="stylesheet" href="./assets/css/HomePageCSS/slider/owl.carousel.min.css">
+    <link rel="stylesheet" href="./assets/css/HomePageCSS/slider/owl.theme.default.min.css">
     <title>Nha Trang Nature Elite</title>
 </head>
 
@@ -45,7 +46,7 @@
             </button>
         </div>
     </header>
-    
+
     <div class="slides">
         <div class="slide-list owl-carousel owl-theme">
             <div class="slide-item">
@@ -122,7 +123,8 @@
                         <div class="tour-item">
                             <figure class="thumb">
                                 <a class="lazy-container" href="#">
-                                    <img class="lazy" src="./assets/image/img__2.jpg" data-src="./assets/image/img__2.jpg">
+                                    <img class="lazy" src="./assets/image/img__2.jpg"
+                                        data-src="./assets/image/img__2.jpg">
                                 </a>
                                 <span class="sale">hot</span>
                             </figure>
@@ -132,7 +134,8 @@
                                 </a>
                                 <div class="place">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <span class="text">Điểm đến: Vịnh San Hô, Làng Chài, đảo Hòn Miễu, đảo Hòn Sỏi</span>
+                                    <span class="text">Điểm đến: Vịnh San Hô, Làng Chài, đảo Hòn Miễu, đảo Hòn
+                                        Sỏi</span>
                                 </div>
                                 <div class="price">
                                     <p class="old-price">
@@ -190,7 +193,8 @@
                                 </a>
                                 <div class="place">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <span class="text">Điểm đến: Vịnh Nha Trang, Horizon Bar, Sundeck, Islands Club</span>
+                                    <span class="text">Điểm đến: Vịnh Nha Trang, Horizon Bar, Sundeck, Islands
+                                        Club</span>
                                 </div>
                                 <div class="price">
                                     <p class="old-price">
@@ -214,10 +218,14 @@
             <div class="container">
                 <h2 class="title">Công Ty Du Lịch Uy Tín Và Chuyên Nghiệp</h2>
                 <p>
-                    Với hơn 10 năm kinh nghiệm tổ chức và điều hành tour tại Nha Trang, cùng với loại hình du lịch "có 1 0 2"
-                    và tiếp đón hơn 10.000 khách du lịch trong và ngoài nước mỗi năm. Chúng tôi nhận được rất nhiều phản hồi 
-                    và đánh giá tốt từ khách hàng và các công ty đối tác vì thái độ làm việc chuyên nghiệp, đội ngũ nhân viên
-                    nhiệt tình, chu đáo, luôn quan tâm đến trải nghiệm của khách du lịch từ khâu đặt Tour đến khi trải nghiệm 
+                    Với hơn 10 năm kinh nghiệm tổ chức và điều hành tour tại Nha Trang, cùng với loại hình du lịch "có 1
+                    0 2"
+                    và tiếp đón hơn 10.000 khách du lịch trong và ngoài nước mỗi năm. Chúng tôi nhận được rất nhiều phản
+                    hồi
+                    và đánh giá tốt từ khách hàng và các công ty đối tác vì thái độ làm việc chuyên nghiệp, đội ngũ nhân
+                    viên
+                    nhiệt tình, chu đáo, luôn quan tâm đến trải nghiệm của khách du lịch từ khâu đặt Tour đến khi trải
+                    nghiệm
                     dịch vụ với một mức giá tốt nhất thị trường. Ở Nha Trang Nature Elite, khách hàng là thượng đế.
                 </p>
                 <div class="text-center">
@@ -265,7 +273,8 @@
                             <i class="far fa-smile-beam"></i>
                             <div class="content">
                                 <h3 class="target-name">Sản Phẩm - Dịch Vụ</h3>
-                                <p>Đảm bảo cung cấp dịch vụ chất lượng nhất tương ứng với mức giá tốt nhất trong cùng khu vực</p>
+                                <p>Đảm bảo cung cấp dịch vụ chất lượng nhất tương ứng với mức giá tốt nhất trong cùng
+                                    khu vực</p>
                             </div>
                         </div>
                     </div>
@@ -283,7 +292,8 @@
                             <i class="far fa-question-circle"></i>
                             <div class="content">
                                 <h3 class="target-name">Hỗ Trợ / Tư Vấn</h3>
-                                <p>Đội ngũ hỗ trợ / tư vấn 24/7 bằng nhiều kênh: Zalo, Facebook, live chat, email, điện thoại ++</p>
+                                <p>Đội ngũ hỗ trợ / tư vấn 24/7 bằng nhiều kênh: Zalo, Facebook, live chat, email, điện
+                                    thoại ++</p>
                             </div>
                         </div>
                     </div>
@@ -291,7 +301,7 @@
             </div>
         </div>
 
-        
+
     </section>
     <footer>
         <div class="container">
@@ -370,4 +380,5 @@
     <script src="./js/sliders/slider.js"></script>
     <script src="./js/sliders/bootstrap.js"></script>
 </body>
+
 </html>
