--- a/login/index.html
+++ b/login/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 
     
-    <title>Giới thiệu</title>
+    <title>Giới thiệu</title>   
 </head>
 <body>
     <header>
@@ -161,5 +161,6 @@
     </footer>
     <script src="./js/sliders/jquery.min.js"></script>
     <script src="./js/sliders/bootstrap.js"></script>
+    <script src="https://kit.fontawesome.com/ef011c00e2.js" crossorigin="anonymous"></script>
 </body>
 </html>
