update form project

--- a/homepage.html
+++ b/homepage.html
@@ -190,7 +190,7 @@
 
               <div class="tour-item">
                 <figure class="thumb">
-                  <a class="lazy-container" href="#">
+                  <a class="lazy-container" href="detail.html">
                     <img
                       class="lazy"
                       src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fimg1.jpg?alt=media&token=91cd87ed-b271-4855-a792-c3c2edb4b351&_gl=1*1men9hx*_ga*MTU1OTk0NzM3OC4xNjgzNTA1MDE2*_ga_CW55HF8NVT*MTY4NTU1MTgwMS4yMy4xLjE2ODU1NTQ2MzYuMC4wLjA."
@@ -211,9 +211,9 @@
                   </div>
                   <div class="price">
                     <p class="old-price">
-                      <del>900,000 VND</del>
+                      <del>800,000 VND</del>
                     </p>
-                    <p class="new-price">800,000 VND <span>/người lớn</span></p>
+                    <p class="new-price">700,000 VND <span>/người lớn</span></p>
                   </div>
                   <div class="other">
                     <p class="timer">Khởi hành hằng ngày</p>
