upload src up branch dev

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="./homepage.html">
+        <a href="./index.html">
           <img
             src="./assets/image/logo.png"
             alt="Trang chủ NhaTrangNatureElite"
