--- a/detail.html
+++ b/detail.html
@@ -21,7 +21,7 @@
     <div class="warpped">
       <header>
         <div class="logo">
-          <a href="#">
+          <a href="index.html">
             <img
               src="https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Flogo.png?alt=media&token=2b706eb6-a8dd-488b-a807-bd03f3c56ad4&_gl=1*16vwv8i*_ga*MTU1OTk0NzM3OC4xNjgzNTA1MDE2*_ga_CW55HF8NVT*MTY4NTU1MTgwMS4yMy4xLjE2ODU1NTM1NDkuMC4wLjA."
               alt="Trang chủ NhaTrangNatureElite"
