Upload Tour List

--- a/tour-details/about.html
+++ b/tour-details/about.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/about.css">
-    <link rel="stylesheet" href="./assets/css/homepage.css">
+    <link rel="stylesheet" href="./assets/css/header_footer.css">
+    
     <title>Giới thiệu</title>
 </head>
 <body>
@@ -19,7 +20,6 @@
         </div>
         <nav class="nav-menu">
             <ul class="main-menu">
-                <li class="menu-item"><a href="#">Giới thiệu</a></li>
                 <li class="menu-item"><a href="#">Tour</a></li>
                 <li class="menu-item"><a href="#">Blogs</a></li>
                 <li class="menu-item"><a href="#">Liên hệ</a></li>
@@ -51,7 +51,7 @@
                 <div class="container">
                     <div class="content-element text-center">
                         <h2 class="title-element">
-                            Chúng tôi là <span class="green-color">Nha Trang Nature Elite</span>
+                            Chúng tôi là <span class="green-color" >Nha Trang Nature Elite</span>
                         </h2>
                         <p>Xuất phát điểm từ những người đam mê du lịch, thích khám phá, mạo hiểm và chinh phục. Chúng tôi hiểu rằng những áp lực trong cuộc sống dường như làm bạn trở thành những con người nhàm chán. Và việc đi du lịch, khám phá những vùng đất mới lạ, tận hưởng nét ẩm thực và văn hóa bản địa không những là phần thưởng mà nó còn là thách thức với thời gian, ví tiền của bạn.</p>
                         <p>Hiểu được điều đó, Nha Trang Nature Elite đã cho ra đời các gói tour du lịch one-day nhằm giúp cho du khách không những sẽ lấy lại được năng lượng sau những ngày làm việc mệt mỏi mà không ảnh hưởng đến tiến độ công việc mà còn có thể khám phá, tận hưởng được những nét đẹp, tinh hoa của thành phố biển Nha Trang trong một khoảng thời gian ngắn với những chuyến đi đầy đủ tiện nghi, lịch trình cụ thể, chi tiết nhưng không kém phần hấp dẫn</p>
@@ -64,8 +64,8 @@
                 <div class="container">
                     <div class="content-element text-center">
                         <h2 class="title-element">
-                            Chúng tôi là <span class="green-color">Tốt nhất</span>
-                            & <span class="green-color">Rẻ nhất</span>
+                            Chúng tôi là <span class="green-color" style="filter: brightness(1.5);">Tốt nhất</span>
+                            & <span class="green-color" style="filter: brightness(1.5);">Rẻ nhất</span>
                         </h2>
                         <p>Với hơn 10 năm kinh nghiệm tổ chức và điều hành tour tại Nha Trang, cùng với loại hình du lịch "có 1 0 2" và tiếp đón hơn 10.000 khách du lịch trong và ngoài nước mỗi năm. Chúng tôi nhận được rất nhiều phản hồi và đánh giá tốt từ khách hàng và các công ty đối tác vì thái độ làm việc chuyên nghiệp, đội ngũ nhân viên nhiệt tình, chu đáo, luôn quan tâm đến trải nghiệm của khách du lịch từ khâu đặt Tour đến khi trải nghiệm dịch vụ với một mức giá tốt nhất thị trường. Ở Nha Trang Nature Elite, khách hàng là thượng đế.</p>
                     </div>
@@ -182,7 +182,7 @@
                                 </p>
                                 <p>
                                     <i class="far fa-check-circle"></i>
-                                    Được hưởng tất cả các quyền lợi sau khi đã tham gia tour tại Nha Trang Booking như: thuê tàu/cano, thuê xe máy, đặt phòng khách sạn, mua vé tham quan... với giá rẻ chưa từng thấy.
+                                    Được hưởng tất cả các quyền lợi sau khi đã tham gia tour tại Nha Trang Nature Elite như: thuê tàu/cano, thuê xe máy, đặt phòng khách sạn, mua vé tham quan... với giá rẻ chưa từng thấy.
                                 </p>
                                 <p>
                                     <i class="far fa-check-circle"></i>
