--- a/tour-details/homepage.html
+++ b/tour-details/homepage.html
@@ -33,7 +33,7 @@
         <nav class="nav-menu">
             <ul class="main-menu">
                 <li class="menu-item"><a href="./about.html">Giới thiệu</a></li>
-                <li class="menu-item"><a href="#">Tour</a></li>
+                <li class="menu-item"><a href="./tour-list.html">Tour</a></li>
                 <li class="menu-item"><a href="#">Blogs</a></li>
                 <li class="menu-item"><a href="#">Liên hệ</a></li>
             </ul>
@@ -76,8 +76,8 @@
         </div>
         <div class="slide-text">
             <span class="mouse-icon"></span>
-            <h1 class="slide-h1">Nha trang Nature Elite</h1>
-            <p class="slide-p">Explore, Experience, and Embrace: Your Perfect One Day Adventure!</p>
+            <h1 class="slide-h1" >Nha trang Nature Elite</h1>
+            <p class="slide-p" >Explore, Experience, and Embrace: Your Perfect One Day Adventure!</p>
         </div>
     </div>
     <section class="main">
